fix: post reservation should modify hospital
